clear:both in news box ie8 fix

--- a/app/views/companies/show.html.slim
+++ b/app/views/companies/show.html.slim
@@ -1,4 +1,5 @@
 .grid-container
+  
   .squared-box
     .borders
       .menu-box
@@ -37,7 +38,7 @@
         =raw @link
       
       
-
+= render :partial => "shared/news", :locals => { :newsposts => @newsposts }
 
 
 
