--- a/app/assets/stylesheets/grid.scss
+++ b/app/assets/stylesheets/grid.scss
@@ -389,6 +389,7 @@ $ninesixty-gutter-width: 20px; // default: 20px
 }
 
 .bottom-box{
+	clear: both;
 	@include grid(12);
 	background-color:#fff;
   margin-top:22px;
