--- a/app/views/companies/show.html.slim
+++ b/app/views/companies/show.html.slim
@@ -38,7 +38,7 @@
         =raw @link
       
       
-= render :partial => "shared/news", :locals => { :newsposts => @newsposts }
+/= render :partial => "shared/news", :locals => { :newsposts => @newsposts }
 
 
 
