--- a/app/views/companies/show.html.slim
+++ b/app/views/companies/show.html.slim
@@ -37,8 +37,8 @@
         '&nbsp;|&nbsp;
         =raw @link
       
-      
-/= render :partial => "shared/news", :locals => { :newsposts => @newsposts }
+.clearfix      
+= render :partial => "shared/news", :locals => { :newsposts => @newsposts }
 
 
 
