--- a/app/assets/stylesheets/grid.scss
+++ b/app/assets/stylesheets/grid.scss
@@ -691,10 +691,18 @@ a:hover{
 
 
 
+/* full clearfix */
+  /* add to floating elements which shall clear floating after themselves */ 
+* html .clearfix {
+    height: 1%; /* IE5-6 */
+    }
+*+html .clearfix {
+	display: inline-block; /* IE7not8 */
+	}
 .clearfix:after { /* FF, IE8, O, S, etc. */
-		content: ".";
-		display: block;
-		height: 0;
-		clear: both;
-		visibility: hidden;
+	content: ".";
+	display: block;
+	height: 0;
+	clear: both;
+	visibility: hidden;
 }
