--- a/public/stylesheets/compiled/grid.css
+++ b/public/stylesheets/compiled/grid.css
@@ -740,6 +740,8 @@ footer, header, hgroup, menu, nav, section {
 /* line 391, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box {
   clear: both;
+  height: 100%;
+  left: 0;
   display: inline;
   float: left;
   margin-left: 10px;
@@ -754,13 +756,13 @@ footer, header, hgroup, menu, nav, section {
   float: left;
   position: relative;
 }
-/* line 403, ../../../app/assets/stylesheets/grid.scss */
+/* line 405, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .borders {
   border-style: solid;
   border-width: 1px;
   height: 184px;
 }
-/* line 409, ../../../app/assets/stylesheets/grid.scss */
+/* line 411, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side {
   height: 184px;
   display: inline;
@@ -771,21 +773,21 @@ footer, header, hgroup, menu, nav, section {
   margin-left: 0;
   width: 168px;
 }
-/* line 416, ../../../app/assets/stylesheets/grid.scss */
+/* line 418, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side .menu-box {
   width: 154px;
   height: 51px;
 }
-/* line 419, ../../../app/assets/stylesheets/grid.scss */
+/* line 421, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side .menu-box a {
   color: #fff;
 }
-/* line 420, ../../../app/assets/stylesheets/grid.scss */
+/* line 422, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 423, ../../../app/assets/stylesheets/grid.scss */
+/* line 425, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .right-side {
   height: 184px;
   display: inline;
@@ -796,12 +798,12 @@ footer, header, hgroup, menu, nav, section {
   margin-right: 0;
   width: 730px;
 }
-/* line 429, ../../../app/assets/stylesheets/grid.scss */
+/* line 431, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .booking-box {
   margin-top: 80px;
   margin-left: 20px;
 }
-/* line 433, ../../../app/assets/stylesheets/grid.scss */
+/* line 435, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news {
   height: 184px;
   display: inline;
@@ -811,7 +813,7 @@ footer, header, hgroup, menu, nav, section {
   width: 220px;
   width: 230px;
 }
-/* line 439, ../../../app/assets/stylesheets/grid.scss */
+/* line 441, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .content .header {
   height: 54px;
   margin-top: 10px;
@@ -824,17 +826,17 @@ footer, header, hgroup, menu, nav, section {
   margin-right: 0;
   width: 230px;
 }
-/* line 446, ../../../app/assets/stylesheets/grid.scss */
+/* line 448, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .content .header a {
   text-decoration: none;
   color: #000;
 }
-/* line 449, ../../../app/assets/stylesheets/grid.scss */
+/* line 451, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .content .header a:hover {
   color: #fff;
   background-color: #000;
 }
-/* line 456, ../../../app/assets/stylesheets/grid.scss */
+/* line 458, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .header {
   height: 54px;
   margin-top: 10px;
@@ -848,49 +850,49 @@ footer, header, hgroup, menu, nav, section {
   width: 230px;
   font-weight: bold;
 }
-/* line 465, ../../../app/assets/stylesheets/grid.scss */
+/* line 467, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news a {
   text-decoration: none;
   color: #448;
 }
-/* line 468, ../../../app/assets/stylesheets/grid.scss */
+/* line 470, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news a:hover {
   color: #fff;
   background-color: #000;
 }
-/* line 472, ../../../app/assets/stylesheets/grid.scss */
+/* line 474, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news h1 {
   margin-bottom: 0px;
   height: 34px;
   color: #000;
 }
-/* line 477, ../../../app/assets/stylesheets/grid.scss */
+/* line 479, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .gray {
   color: #999;
 }
-/* line 480, ../../../app/assets/stylesheets/grid.scss */
+/* line 482, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .content {
   margin-top: 0px;
   width: 210px;
 }
 
-/* line 487, ../../../app/assets/stylesheets/grid.scss */
+/* line 489, ../../../app/assets/stylesheets/grid.scss */
 .text-right {
   text-align: right;
 }
 
-/* line 491, ../../../app/assets/stylesheets/grid.scss */
+/* line 493, ../../../app/assets/stylesheets/grid.scss */
 .grid-container {
   margin-left: auto;
   margin-right: auto;
   width: 960px;
 }
-/* line 493, ../../../app/assets/stylesheets/grid.scss */
+/* line 495, ../../../app/assets/stylesheets/grid.scss */
 .grid-container .top-margin {
   margin-top: 32px;
 }
 
-/* line 498, ../../../app/assets/stylesheets/grid.scss */
+/* line 500, ../../../app/assets/stylesheets/grid.scss */
 .meeting-room {
   display: inline;
   float: left;
@@ -900,7 +902,7 @@ footer, header, hgroup, menu, nav, section {
   margin-left: 0;
 }
 
-/* line 503, ../../../app/assets/stylesheets/grid.scss */
+/* line 505, ../../../app/assets/stylesheets/grid.scss */
 .meeting-room-right {
   display: inline;
   float: left;
@@ -911,19 +913,19 @@ footer, header, hgroup, menu, nav, section {
   padding-right: 480px;
 }
 
-/* line 510, ../../../app/assets/stylesheets/grid.scss */
+/* line 512, ../../../app/assets/stylesheets/grid.scss */
 a {
   text-decoration: none;
   color: #444;
 }
 
-/* line 515, ../../../app/assets/stylesheets/grid.scss */
+/* line 517, ../../../app/assets/stylesheets/grid.scss */
 a:hover {
   color: #fff;
   background-color: #000;
 }
 
-/* line 520, ../../../app/assets/stylesheets/grid.scss */
+/* line 522, ../../../app/assets/stylesheets/grid.scss */
 .slim-box {
   background-color: #fff;
   margin-top: 36px;
@@ -934,29 +936,29 @@ a:hover {
   width: 460px;
   min-height: 80px;
 }
-/* line 525, ../../../app/assets/stylesheets/grid.scss */
+/* line 527, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .borders {
   border-style: solid;
   border-width: 1px;
   height: 80px;
   display: block;
 }
-/* line 531, ../../../app/assets/stylesheets/grid.scss */
+/* line 533, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 534, ../../../app/assets/stylesheets/grid.scss */
+/* line 536, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box a {
   color: #fff;
 }
-/* line 535, ../../../app/assets/stylesheets/grid.scss */
+/* line 537, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
 
-/* line 539, ../../../app/assets/stylesheets/grid.scss */
+/* line 541, ../../../app/assets/stylesheets/grid.scss */
 .googlemap {
   display: inline;
   float: left;
@@ -969,14 +971,14 @@ a:hover {
   width: 940px;
   display: block;
 }
-/* line 547, ../../../app/assets/stylesheets/grid.scss */
+/* line 549, ../../../app/assets/stylesheets/grid.scss */
 .googlemap .borders {
   border-style: solid;
   border-width: 1px;
   height: 600px;
 }
 
-/* line 554, ../../../app/assets/stylesheets/grid.scss */
+/* line 556, ../../../app/assets/stylesheets/grid.scss */
 .company-index {
   width: 110px;
   height: 60px;
@@ -986,7 +988,7 @@ a:hover {
   margin-right: 10px;
   margin-top: 8px;
 }
-/* line 563, ../../../app/assets/stylesheets/grid.scss */
+/* line 565, ../../../app/assets/stylesheets/grid.scss */
 .company-index .image {
   border-style: solid;
   border-width: 1px;
@@ -997,7 +999,7 @@ a:hover {
   margin: 1px 10px 1px 1px;
 }
 
-/* line 574, ../../../app/assets/stylesheets/grid.scss */
+/* line 576, ../../../app/assets/stylesheets/grid.scss */
 .fullpage {
   display: inline;
   float: left;
@@ -1006,7 +1008,7 @@ a:hover {
   width: 940px;
 }
 
-/* line 580, ../../../app/assets/stylesheets/grid.scss */
+/* line 582, ../../../app/assets/stylesheets/grid.scss */
 .calendar-row {
   display: inline;
   float: left;
@@ -1017,21 +1019,21 @@ a:hover {
   margin-right: 0;
   margin-right: 6px;
 }
-/* line 586, ../../../app/assets/stylesheets/grid.scss */
+/* line 588, ../../../app/assets/stylesheets/grid.scss */
 .calendar-row .booking-back {
   padding: 4px;
   background-color: #999;
   margin: 6px;
 }
 
-/* line 595, ../../../app/assets/stylesheets/grid.scss */
+/* line 597, ../../../app/assets/stylesheets/grid.scss */
 .booking-meetingroom-column {
   float: left;
   margin: 2px;
   width: 134px;
 }
 
-/* line 601, ../../../app/assets/stylesheets/grid.scss */
+/* line 603, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 {
   min-height: 500px;
   display: inline;
@@ -1041,7 +1043,7 @@ a:hover {
   width: 940px;
   margin-top: 24px;
 }
-/* line 605, ../../../app/assets/stylesheets/grid.scss */
+/* line 607, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .left-column {
   display: inline;
   float: left;
@@ -1050,7 +1052,7 @@ a:hover {
   width: 220px;
   margin-left: 0;
 }
-/* line 609, ../../../app/assets/stylesheets/grid.scss */
+/* line 611, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column1 {
   display: inline;
   float: left;
@@ -1058,7 +1060,7 @@ a:hover {
   margin-right: 10px;
   width: 60px;
 }
-/* line 612, ../../../app/assets/stylesheets/grid.scss */
+/* line 614, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column2 {
   display: inline;
   float: left;
@@ -1066,7 +1068,7 @@ a:hover {
   margin-right: 10px;
   width: 140px;
 }
-/* line 615, ../../../app/assets/stylesheets/grid.scss */
+/* line 617, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column3 {
   display: inline;
   float: left;
@@ -1074,7 +1076,7 @@ a:hover {
   margin-right: 10px;
   width: 220px;
 }
-/* line 618, ../../../app/assets/stylesheets/grid.scss */
+/* line 620, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .right-column {
   display: inline;
   float: left;
@@ -1085,19 +1087,19 @@ a:hover {
   padding-right: 80px;
 }
 
-/* line 625, ../../../app/assets/stylesheets/grid.scss */
+/* line 627, ../../../app/assets/stylesheets/grid.scss */
 .bookings-calendar {
   margin-top: 10px;
   margin-left: 10px;
   text-align: center;
 }
 
-/* line 631, ../../../app/assets/stylesheets/grid.scss */
+/* line 633, ../../../app/assets/stylesheets/grid.scss */
 .top_margin {
   margin-top: 8px;
 }
 
-/* line 633, ../../../app/assets/stylesheets/grid.scss */
+/* line 635, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box {
   background-color: #fff;
   margin-top: 36px;
@@ -1109,41 +1111,41 @@ a:hover {
   min-height: 376px;
   display: block;
 }
-/* line 639, ../../../app/assets/stylesheets/grid.scss */
+/* line 641, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .borders {
   border-style: solid;
   border-width: 1px;
   min-height: 376px;
   display: block;
 }
-/* line 646, ../../../app/assets/stylesheets/grid.scss */
+/* line 648, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .content .content-top {
   height: 280px;
 }
-/* line 648, ../../../app/assets/stylesheets/grid.scss */
+/* line 650, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .text-right {
   text-align: right;
 }
-/* line 651, ../../../app/assets/stylesheets/grid.scss */
+/* line 653, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 654, ../../../app/assets/stylesheets/grid.scss */
+/* line 656, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box a {
   color: #fff;
 }
-/* line 655, ../../../app/assets/stylesheets/grid.scss */
+/* line 657, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 657, ../../../app/assets/stylesheets/grid.scss */
+/* line 659, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .image-box {
   height: 376px;
 }
 
-/* line 662, ../../../app/assets/stylesheets/grid.scss */
+/* line 664, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box {
   background-color: #fff;
   margin-top: 36px;
@@ -1155,60 +1157,36 @@ a:hover {
   min-height: 376px;
   display: block;
 }
-/* line 668, ../../../app/assets/stylesheets/grid.scss */
+/* line 670, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .borders {
   border-style: solid;
   border-width: 1px;
   min-height: 376px;
   display: block;
 }
-/* line 675, ../../../app/assets/stylesheets/grid.scss */
+/* line 677, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .content .content-top {
   height: 280px;
 }
-/* line 677, ../../../app/assets/stylesheets/grid.scss */
+/* line 679, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .text-right {
   text-align: right;
 }
-/* line 680, ../../../app/assets/stylesheets/grid.scss */
+/* line 682, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 683, ../../../app/assets/stylesheets/grid.scss */
+/* line 685, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box a {
   color: #fff;
 }
-/* line 684, ../../../app/assets/stylesheets/grid.scss */
+/* line 686, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 686, ../../../app/assets/stylesheets/grid.scss */
+/* line 688, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .image-box {
   height: 376px;
-}
-
-/* full clearfix */
-/* add to floating elements which shall clear floating after themselves */
-/* line 696, ../../../app/assets/stylesheets/grid.scss */
-* html .clearfix {
-  height: 1%;
-  /* IE5-6 */
-}
-
-/* line 699, ../../../app/assets/stylesheets/grid.scss */
-* + html .clearfix {
-  display: inline-block;
-  /* IE7not8 */
-}
-
-/* line 702, ../../../app/assets/stylesheets/grid.scss */
-.clearfix:after {
-  /* FF, IE8, O, S, etc. */
-  content: ".";
-  display: block;
-  height: 0;
-  clear: both;
-  visibility: hidden;
 }
