--- a/app/views/companies/show.html.slim
+++ b/app/views/companies/show.html.slim
@@ -28,7 +28,7 @@
   
   
         
-  .company-image-box.clearfix
+  .company-image-box
     .borders.fixed-height
       = image_tag @company.image.url(:preview), :border => 'none', :class => 'image_fix'
       .tlf-box
