--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,6 +1,8 @@
 html
   head
     title Marselis Tværvej 4
+    meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7"
+
 
     = stylesheet_link_tag 'compiled/grid.css', 'compiled/text.css', 'compiled/main.css', :media => 'screen, projection'
     = stylesheet_link_tag "galleriffic-3", 'gallery'
