--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,7 +1,7 @@
 html
   head
     title Marselis Tværvej 4
-    meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7"
+    /meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7"
 
 
     = stylesheet_link_tag 'compiled/grid.css', 'compiled/text.css', 'compiled/main.css', :media => 'screen, projection'
