--- a/public/stylesheets/compiled/grid.css
+++ b/public/stylesheets/compiled/grid.css
@@ -739,9 +739,10 @@ footer, header, hgroup, menu, nav, section {
 
 /* line 391, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box {
-  clear: both;
-  height: 100%;
-  left: 0;
+  /*	clear: both;
+  	height: 100%;
+  	left:0;
+  */
   display: inline;
   float: left;
   margin-left: 10px;
@@ -756,13 +757,13 @@ footer, header, hgroup, menu, nav, section {
   float: left;
   position: relative;
 }
-/* line 405, ../../../app/assets/stylesheets/grid.scss */
+/* line 406, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .borders {
   border-style: solid;
   border-width: 1px;
   height: 184px;
 }
-/* line 411, ../../../app/assets/stylesheets/grid.scss */
+/* line 412, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side {
   height: 184px;
   display: inline;
@@ -773,21 +774,21 @@ footer, header, hgroup, menu, nav, section {
   margin-left: 0;
   width: 168px;
 }
-/* line 418, ../../../app/assets/stylesheets/grid.scss */
+/* line 419, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side .menu-box {
   width: 154px;
   height: 51px;
 }
-/* line 421, ../../../app/assets/stylesheets/grid.scss */
+/* line 422, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side .menu-box a {
   color: #fff;
 }
-/* line 422, ../../../app/assets/stylesheets/grid.scss */
+/* line 423, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 425, ../../../app/assets/stylesheets/grid.scss */
+/* line 426, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .right-side {
   height: 184px;
   display: inline;
@@ -798,12 +799,12 @@ footer, header, hgroup, menu, nav, section {
   margin-right: 0;
   width: 730px;
 }
-/* line 431, ../../../app/assets/stylesheets/grid.scss */
+/* line 432, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .booking-box {
   margin-top: 80px;
   margin-left: 20px;
 }
-/* line 435, ../../../app/assets/stylesheets/grid.scss */
+/* line 436, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news {
   height: 184px;
   display: inline;
@@ -813,7 +814,7 @@ footer, header, hgroup, menu, nav, section {
   width: 220px;
   width: 230px;
 }
-/* line 441, ../../../app/assets/stylesheets/grid.scss */
+/* line 442, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .content .header {
   height: 54px;
   margin-top: 10px;
@@ -826,17 +827,17 @@ footer, header, hgroup, menu, nav, section {
   margin-right: 0;
   width: 230px;
 }
-/* line 448, ../../../app/assets/stylesheets/grid.scss */
+/* line 449, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .content .header a {
   text-decoration: none;
   color: #000;
 }
-/* line 451, ../../../app/assets/stylesheets/grid.scss */
+/* line 452, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .content .header a:hover {
   color: #fff;
   background-color: #000;
 }
-/* line 458, ../../../app/assets/stylesheets/grid.scss */
+/* line 459, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .header {
   height: 54px;
   margin-top: 10px;
@@ -850,49 +851,49 @@ footer, header, hgroup, menu, nav, section {
   width: 230px;
   font-weight: bold;
 }
-/* line 467, ../../../app/assets/stylesheets/grid.scss */
+/* line 468, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news a {
   text-decoration: none;
   color: #448;
 }
-/* line 470, ../../../app/assets/stylesheets/grid.scss */
+/* line 471, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news a:hover {
   color: #fff;
   background-color: #000;
 }
-/* line 474, ../../../app/assets/stylesheets/grid.scss */
+/* line 475, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news h1 {
   margin-bottom: 0px;
   height: 34px;
   color: #000;
 }
-/* line 479, ../../../app/assets/stylesheets/grid.scss */
+/* line 480, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .gray {
   color: #999;
 }
-/* line 482, ../../../app/assets/stylesheets/grid.scss */
+/* line 483, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .content {
   margin-top: 0px;
   width: 210px;
 }
 
-/* line 489, ../../../app/assets/stylesheets/grid.scss */
+/* line 490, ../../../app/assets/stylesheets/grid.scss */
 .text-right {
   text-align: right;
 }
 
-/* line 493, ../../../app/assets/stylesheets/grid.scss */
+/* line 494, ../../../app/assets/stylesheets/grid.scss */
 .grid-container {
   margin-left: auto;
   margin-right: auto;
   width: 960px;
 }
-/* line 495, ../../../app/assets/stylesheets/grid.scss */
+/* line 496, ../../../app/assets/stylesheets/grid.scss */
 .grid-container .top-margin {
   margin-top: 32px;
 }
 
-/* line 500, ../../../app/assets/stylesheets/grid.scss */
+/* line 501, ../../../app/assets/stylesheets/grid.scss */
 .meeting-room {
   display: inline;
   float: left;
@@ -902,7 +903,7 @@ footer, header, hgroup, menu, nav, section {
   margin-left: 0;
 }
 
-/* line 505, ../../../app/assets/stylesheets/grid.scss */
+/* line 506, ../../../app/assets/stylesheets/grid.scss */
 .meeting-room-right {
   display: inline;
   float: left;
@@ -913,19 +914,19 @@ footer, header, hgroup, menu, nav, section {
   padding-right: 480px;
 }
 
-/* line 512, ../../../app/assets/stylesheets/grid.scss */
+/* line 513, ../../../app/assets/stylesheets/grid.scss */
 a {
   text-decoration: none;
   color: #444;
 }
 
-/* line 517, ../../../app/assets/stylesheets/grid.scss */
+/* line 518, ../../../app/assets/stylesheets/grid.scss */
 a:hover {
   color: #fff;
   background-color: #000;
 }
 
-/* line 522, ../../../app/assets/stylesheets/grid.scss */
+/* line 523, ../../../app/assets/stylesheets/grid.scss */
 .slim-box {
   background-color: #fff;
   margin-top: 36px;
@@ -936,29 +937,29 @@ a:hover {
   width: 460px;
   min-height: 80px;
 }
-/* line 527, ../../../app/assets/stylesheets/grid.scss */
+/* line 528, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .borders {
   border-style: solid;
   border-width: 1px;
   height: 80px;
   display: block;
 }
-/* line 533, ../../../app/assets/stylesheets/grid.scss */
+/* line 534, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 536, ../../../app/assets/stylesheets/grid.scss */
+/* line 537, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box a {
   color: #fff;
 }
-/* line 537, ../../../app/assets/stylesheets/grid.scss */
+/* line 538, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
 
-/* line 541, ../../../app/assets/stylesheets/grid.scss */
+/* line 542, ../../../app/assets/stylesheets/grid.scss */
 .googlemap {
   display: inline;
   float: left;
@@ -971,14 +972,14 @@ a:hover {
   width: 940px;
   display: block;
 }
-/* line 549, ../../../app/assets/stylesheets/grid.scss */
+/* line 550, ../../../app/assets/stylesheets/grid.scss */
 .googlemap .borders {
   border-style: solid;
   border-width: 1px;
   height: 600px;
 }
 
-/* line 556, ../../../app/assets/stylesheets/grid.scss */
+/* line 557, ../../../app/assets/stylesheets/grid.scss */
 .company-index {
   width: 110px;
   height: 60px;
@@ -988,7 +989,7 @@ a:hover {
   margin-right: 10px;
   margin-top: 8px;
 }
-/* line 565, ../../../app/assets/stylesheets/grid.scss */
+/* line 566, ../../../app/assets/stylesheets/grid.scss */
 .company-index .image {
   border-style: solid;
   border-width: 1px;
@@ -999,7 +1000,7 @@ a:hover {
   margin: 1px 10px 1px 1px;
 }
 
-/* line 576, ../../../app/assets/stylesheets/grid.scss */
+/* line 577, ../../../app/assets/stylesheets/grid.scss */
 .fullpage {
   display: inline;
   float: left;
@@ -1008,7 +1009,7 @@ a:hover {
   width: 940px;
 }
 
-/* line 582, ../../../app/assets/stylesheets/grid.scss */
+/* line 583, ../../../app/assets/stylesheets/grid.scss */
 .calendar-row {
   display: inline;
   float: left;
@@ -1019,21 +1020,21 @@ a:hover {
   margin-right: 0;
   margin-right: 6px;
 }
-/* line 588, ../../../app/assets/stylesheets/grid.scss */
+/* line 589, ../../../app/assets/stylesheets/grid.scss */
 .calendar-row .booking-back {
   padding: 4px;
   background-color: #999;
   margin: 6px;
 }
 
-/* line 597, ../../../app/assets/stylesheets/grid.scss */
+/* line 598, ../../../app/assets/stylesheets/grid.scss */
 .booking-meetingroom-column {
   float: left;
   margin: 2px;
   width: 134px;
 }
 
-/* line 603, ../../../app/assets/stylesheets/grid.scss */
+/* line 604, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 {
   min-height: 500px;
   display: inline;
@@ -1043,7 +1044,7 @@ a:hover {
   width: 940px;
   margin-top: 24px;
 }
-/* line 607, ../../../app/assets/stylesheets/grid.scss */
+/* line 608, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .left-column {
   display: inline;
   float: left;
@@ -1052,7 +1053,7 @@ a:hover {
   width: 220px;
   margin-left: 0;
 }
-/* line 611, ../../../app/assets/stylesheets/grid.scss */
+/* line 612, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column1 {
   display: inline;
   float: left;
@@ -1060,7 +1061,7 @@ a:hover {
   margin-right: 10px;
   width: 60px;
 }
-/* line 614, ../../../app/assets/stylesheets/grid.scss */
+/* line 615, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column2 {
   display: inline;
   float: left;
@@ -1068,7 +1069,7 @@ a:hover {
   margin-right: 10px;
   width: 140px;
 }
-/* line 617, ../../../app/assets/stylesheets/grid.scss */
+/* line 618, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column3 {
   display: inline;
   float: left;
@@ -1076,7 +1077,7 @@ a:hover {
   margin-right: 10px;
   width: 220px;
 }
-/* line 620, ../../../app/assets/stylesheets/grid.scss */
+/* line 621, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .right-column {
   display: inline;
   float: left;
@@ -1087,19 +1088,19 @@ a:hover {
   padding-right: 80px;
 }
 
-/* line 627, ../../../app/assets/stylesheets/grid.scss */
+/* line 628, ../../../app/assets/stylesheets/grid.scss */
 .bookings-calendar {
   margin-top: 10px;
   margin-left: 10px;
   text-align: center;
 }
 
-/* line 633, ../../../app/assets/stylesheets/grid.scss */
+/* line 634, ../../../app/assets/stylesheets/grid.scss */
 .top_margin {
   margin-top: 8px;
 }
 
-/* line 635, ../../../app/assets/stylesheets/grid.scss */
+/* line 636, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box {
   background-color: #fff;
   margin-top: 36px;
@@ -1111,41 +1112,41 @@ a:hover {
   min-height: 376px;
   display: block;
 }
-/* line 641, ../../../app/assets/stylesheets/grid.scss */
+/* line 642, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .borders {
   border-style: solid;
   border-width: 1px;
   min-height: 376px;
   display: block;
 }
-/* line 648, ../../../app/assets/stylesheets/grid.scss */
+/* line 649, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .content .content-top {
   height: 280px;
 }
-/* line 650, ../../../app/assets/stylesheets/grid.scss */
+/* line 651, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .text-right {
   text-align: right;
 }
-/* line 653, ../../../app/assets/stylesheets/grid.scss */
+/* line 654, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 656, ../../../app/assets/stylesheets/grid.scss */
+/* line 657, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box a {
   color: #fff;
 }
-/* line 657, ../../../app/assets/stylesheets/grid.scss */
+/* line 658, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 659, ../../../app/assets/stylesheets/grid.scss */
+/* line 660, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .image-box {
   height: 376px;
 }
 
-/* line 664, ../../../app/assets/stylesheets/grid.scss */
+/* line 665, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box {
   background-color: #fff;
   margin-top: 36px;
@@ -1157,36 +1158,36 @@ a:hover {
   min-height: 376px;
   display: block;
 }
-/* line 670, ../../../app/assets/stylesheets/grid.scss */
+/* line 671, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .borders {
   border-style: solid;
   border-width: 1px;
   min-height: 376px;
   display: block;
 }
-/* line 677, ../../../app/assets/stylesheets/grid.scss */
+/* line 678, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .content .content-top {
   height: 280px;
 }
-/* line 679, ../../../app/assets/stylesheets/grid.scss */
+/* line 680, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .text-right {
   text-align: right;
 }
-/* line 682, ../../../app/assets/stylesheets/grid.scss */
+/* line 683, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 685, ../../../app/assets/stylesheets/grid.scss */
+/* line 686, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box a {
   color: #fff;
 }
-/* line 686, ../../../app/assets/stylesheets/grid.scss */
+/* line 687, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 688, ../../../app/assets/stylesheets/grid.scss */
+/* line 689, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .image-box {
   height: 376px;
 }
