--- a/app/assets/stylesheets/grid.scss
+++ b/app/assets/stylesheets/grid.scss
@@ -402,11 +402,14 @@ $ninesixty-gutter-width: 20px; // default: 20px
 	display:block;
 	float:left;
 	position:relative;
+	clear: both;
 
 	.borders{
 		border-style:solid;
 		border-width:1px;
 		height:184px;
+		position:relative;
+		clear: both;
 
 	}
 	.left-side{
@@ -415,7 +418,8 @@ $ninesixty-gutter-width: 20px; // default: 20px
 		@include grid(3);
 		@include alpha;
 		width:168px;
-		
+		position:relative;
+		clear: both;
 		.menu-box{
 			width:154px;
 			height:51px;
