--- a/public/stylesheets/compiled/grid.css
+++ b/public/stylesheets/compiled/grid.css
@@ -666,30 +666,8 @@ footer, header, hgroup, menu, nav, section {
 .squared-box .image-box {
   height: 376px;
 }
-/* line 324, ../../../app/assets/stylesheets/grid.scss */
-.squared-box .tlf-box {
-  text-align: right;
-  background-color: #ddd;
-  border-style: solid;
-  border-width: 1px;
-  margin-bottom: 8px;
-  display: inline;
-  position: absolute;
-  left: 100px;
-  top: 100px;
-  height: 60px;
-  width: 300px;
-}
-/* line 340, ../../../app/assets/stylesheets/grid.scss */
-.squared-box .tlf-box .tlf-content {
-  text-align: left;
-}
-/* line 343, ../../../app/assets/stylesheets/grid.scss */
-.squared-box .tlf-box .web-content {
-  text-align: right;
-}
 
-/* line 349, ../../../app/assets/stylesheets/grid.scss */
+/* line 327, ../../../app/assets/stylesheets/grid.scss */
 .company-image-box {
   position: relative;
   background-color: #fff;
@@ -704,7 +682,7 @@ footer, header, hgroup, menu, nav, section {
   overflow: hidden;
   text-align: right;
 }
-/* line 359, ../../../app/assets/stylesheets/grid.scss */
+/* line 337, ../../../app/assets/stylesheets/grid.scss */
 .company-image-box .borders {
   border-style: solid;
   border-width: 1px;
@@ -712,7 +690,7 @@ footer, header, hgroup, menu, nav, section {
   display: block;
   overflow: hidden;
 }
-/* line 367, ../../../app/assets/stylesheets/grid.scss */
+/* line 345, ../../../app/assets/stylesheets/grid.scss */
 .company-image-box .tlf-box {
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
@@ -726,23 +704,24 @@ footer, header, hgroup, menu, nav, section {
   right: 0;
   padding: 8px;
 }
-/* line 377, ../../../app/assets/stylesheets/grid.scss */
+/* line 355, ../../../app/assets/stylesheets/grid.scss */
 .company-image-box .tlf-box a {
   color: #000;
   text-transform: uppercase;
 }
 
-/* line 387, ../../../app/assets/stylesheets/grid.scss */
+/* line 364, ../../../app/assets/stylesheets/grid.scss */
 .fixed-height {
   height: 376px;
 }
 
-/* line 391, ../../../app/assets/stylesheets/grid.scss */
+/* line 368, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box {
-  /*	clear: both;
-  	height: 100%;
-  	left:0;
-  */
+  clear: both;
+  height: 100%;
+  left: 0;
+  zoom: 1;
+  writing-mode: tb-rl;
   display: inline;
   float: left;
   margin-left: 10px;
@@ -758,7 +737,7 @@ footer, header, hgroup, menu, nav, section {
   position: relative;
   clear: both;
 }
-/* line 407, ../../../app/assets/stylesheets/grid.scss */
+/* line 387, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .borders {
   border-style: solid;
   border-width: 1px;
@@ -766,7 +745,7 @@ footer, header, hgroup, menu, nav, section {
   position: relative;
   clear: both;
 }
-/* line 415, ../../../app/assets/stylesheets/grid.scss */
+/* line 395, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side {
   height: 184px;
   display: inline;
@@ -779,21 +758,21 @@ footer, header, hgroup, menu, nav, section {
   position: relative;
   clear: both;
 }
-/* line 423, ../../../app/assets/stylesheets/grid.scss */
+/* line 403, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side .menu-box {
   width: 154px;
   height: 51px;
 }
-/* line 426, ../../../app/assets/stylesheets/grid.scss */
+/* line 406, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side .menu-box a {
   color: #fff;
 }
-/* line 427, ../../../app/assets/stylesheets/grid.scss */
+/* line 407, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 430, ../../../app/assets/stylesheets/grid.scss */
+/* line 410, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .right-side {
   height: 184px;
   display: inline;
@@ -804,12 +783,12 @@ footer, header, hgroup, menu, nav, section {
   margin-right: 0;
   width: 730px;
 }
-/* line 436, ../../../app/assets/stylesheets/grid.scss */
+/* line 416, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .booking-box {
   margin-top: 80px;
   margin-left: 20px;
 }
-/* line 440, ../../../app/assets/stylesheets/grid.scss */
+/* line 420, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news {
   height: 184px;
   display: inline;
@@ -819,7 +798,7 @@ footer, header, hgroup, menu, nav, section {
   width: 220px;
   width: 230px;
 }
-/* line 446, ../../../app/assets/stylesheets/grid.scss */
+/* line 426, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .content .header {
   height: 54px;
   margin-top: 10px;
@@ -832,17 +811,17 @@ footer, header, hgroup, menu, nav, section {
   margin-right: 0;
   width: 230px;
 }
-/* line 453, ../../../app/assets/stylesheets/grid.scss */
+/* line 433, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .content .header a {
   text-decoration: none;
   color: #000;
 }
-/* line 456, ../../../app/assets/stylesheets/grid.scss */
+/* line 436, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .content .header a:hover {
   color: #fff;
   background-color: #000;
 }
-/* line 463, ../../../app/assets/stylesheets/grid.scss */
+/* line 443, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .header {
   height: 54px;
   margin-top: 10px;
@@ -856,49 +835,49 @@ footer, header, hgroup, menu, nav, section {
   width: 230px;
   font-weight: bold;
 }
-/* line 472, ../../../app/assets/stylesheets/grid.scss */
+/* line 452, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news a {
   text-decoration: none;
   color: #448;
 }
-/* line 475, ../../../app/assets/stylesheets/grid.scss */
+/* line 455, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news a:hover {
   color: #fff;
   background-color: #000;
 }
-/* line 479, ../../../app/assets/stylesheets/grid.scss */
+/* line 459, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news h1 {
   margin-bottom: 0px;
   height: 34px;
   color: #000;
 }
-/* line 484, ../../../app/assets/stylesheets/grid.scss */
+/* line 464, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .gray {
   color: #999;
 }
-/* line 487, ../../../app/assets/stylesheets/grid.scss */
+/* line 467, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .content {
   margin-top: 0px;
   width: 210px;
 }
 
-/* line 494, ../../../app/assets/stylesheets/grid.scss */
+/* line 474, ../../../app/assets/stylesheets/grid.scss */
 .text-right {
   text-align: right;
 }
 
-/* line 498, ../../../app/assets/stylesheets/grid.scss */
+/* line 478, ../../../app/assets/stylesheets/grid.scss */
 .grid-container {
   margin-left: auto;
   margin-right: auto;
   width: 960px;
 }
-/* line 500, ../../../app/assets/stylesheets/grid.scss */
+/* line 480, ../../../app/assets/stylesheets/grid.scss */
 .grid-container .top-margin {
   margin-top: 32px;
 }
 
-/* line 505, ../../../app/assets/stylesheets/grid.scss */
+/* line 485, ../../../app/assets/stylesheets/grid.scss */
 .meeting-room {
   display: inline;
   float: left;
@@ -908,7 +887,7 @@ footer, header, hgroup, menu, nav, section {
   margin-left: 0;
 }
 
-/* line 510, ../../../app/assets/stylesheets/grid.scss */
+/* line 490, ../../../app/assets/stylesheets/grid.scss */
 .meeting-room-right {
   display: inline;
   float: left;
@@ -919,19 +898,19 @@ footer, header, hgroup, menu, nav, section {
   padding-right: 480px;
 }
 
-/* line 517, ../../../app/assets/stylesheets/grid.scss */
+/* line 497, ../../../app/assets/stylesheets/grid.scss */
 a {
   text-decoration: none;
   color: #444;
 }
 
-/* line 522, ../../../app/assets/stylesheets/grid.scss */
+/* line 502, ../../../app/assets/stylesheets/grid.scss */
 a:hover {
   color: #fff;
   background-color: #000;
 }
 
-/* line 527, ../../../app/assets/stylesheets/grid.scss */
+/* line 507, ../../../app/assets/stylesheets/grid.scss */
 .slim-box {
   background-color: #fff;
   margin-top: 36px;
@@ -942,29 +921,29 @@ a:hover {
   width: 460px;
   min-height: 80px;
 }
-/* line 532, ../../../app/assets/stylesheets/grid.scss */
+/* line 512, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .borders {
   border-style: solid;
   border-width: 1px;
   height: 80px;
   display: block;
 }
-/* line 538, ../../../app/assets/stylesheets/grid.scss */
+/* line 518, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 541, ../../../app/assets/stylesheets/grid.scss */
+/* line 521, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box a {
   color: #fff;
 }
-/* line 542, ../../../app/assets/stylesheets/grid.scss */
+/* line 522, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
 
-/* line 546, ../../../app/assets/stylesheets/grid.scss */
+/* line 526, ../../../app/assets/stylesheets/grid.scss */
 .googlemap {
   display: inline;
   float: left;
@@ -977,14 +956,14 @@ a:hover {
   width: 940px;
   display: block;
 }
-/* line 554, ../../../app/assets/stylesheets/grid.scss */
+/* line 534, ../../../app/assets/stylesheets/grid.scss */
 .googlemap .borders {
   border-style: solid;
   border-width: 1px;
   height: 600px;
 }
 
-/* line 561, ../../../app/assets/stylesheets/grid.scss */
+/* line 541, ../../../app/assets/stylesheets/grid.scss */
 .company-index {
   width: 110px;
   height: 60px;
@@ -994,7 +973,7 @@ a:hover {
   margin-right: 10px;
   margin-top: 8px;
 }
-/* line 570, ../../../app/assets/stylesheets/grid.scss */
+/* line 550, ../../../app/assets/stylesheets/grid.scss */
 .company-index .image {
   border-style: solid;
   border-width: 1px;
@@ -1005,7 +984,7 @@ a:hover {
   margin: 1px 10px 1px 1px;
 }
 
-/* line 581, ../../../app/assets/stylesheets/grid.scss */
+/* line 561, ../../../app/assets/stylesheets/grid.scss */
 .fullpage {
   display: inline;
   float: left;
@@ -1014,7 +993,7 @@ a:hover {
   width: 940px;
 }
 
-/* line 587, ../../../app/assets/stylesheets/grid.scss */
+/* line 567, ../../../app/assets/stylesheets/grid.scss */
 .calendar-row {
   display: inline;
   float: left;
@@ -1025,21 +1004,21 @@ a:hover {
   margin-right: 0;
   margin-right: 6px;
 }
-/* line 593, ../../../app/assets/stylesheets/grid.scss */
+/* line 573, ../../../app/assets/stylesheets/grid.scss */
 .calendar-row .booking-back {
   padding: 4px;
   background-color: #999;
   margin: 6px;
 }
 
-/* line 602, ../../../app/assets/stylesheets/grid.scss */
+/* line 582, ../../../app/assets/stylesheets/grid.scss */
 .booking-meetingroom-column {
   float: left;
   margin: 2px;
   width: 134px;
 }
 
-/* line 608, ../../../app/assets/stylesheets/grid.scss */
+/* line 588, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 {
   min-height: 500px;
   display: inline;
@@ -1049,7 +1028,7 @@ a:hover {
   width: 940px;
   margin-top: 24px;
 }
-/* line 612, ../../../app/assets/stylesheets/grid.scss */
+/* line 592, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .left-column {
   display: inline;
   float: left;
@@ -1058,7 +1037,7 @@ a:hover {
   width: 220px;
   margin-left: 0;
 }
-/* line 616, ../../../app/assets/stylesheets/grid.scss */
+/* line 596, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column1 {
   display: inline;
   float: left;
@@ -1066,7 +1045,7 @@ a:hover {
   margin-right: 10px;
   width: 60px;
 }
-/* line 619, ../../../app/assets/stylesheets/grid.scss */
+/* line 599, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column2 {
   display: inline;
   float: left;
@@ -1074,7 +1053,7 @@ a:hover {
   margin-right: 10px;
   width: 140px;
 }
-/* line 622, ../../../app/assets/stylesheets/grid.scss */
+/* line 602, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column3 {
   display: inline;
   float: left;
@@ -1082,7 +1061,7 @@ a:hover {
   margin-right: 10px;
   width: 220px;
 }
-/* line 625, ../../../app/assets/stylesheets/grid.scss */
+/* line 605, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .right-column {
   display: inline;
   float: left;
@@ -1093,19 +1072,19 @@ a:hover {
   padding-right: 80px;
 }
 
-/* line 632, ../../../app/assets/stylesheets/grid.scss */
+/* line 612, ../../../app/assets/stylesheets/grid.scss */
 .bookings-calendar {
   margin-top: 10px;
   margin-left: 10px;
   text-align: center;
 }
 
-/* line 638, ../../../app/assets/stylesheets/grid.scss */
+/* line 618, ../../../app/assets/stylesheets/grid.scss */
 .top_margin {
   margin-top: 8px;
 }
 
-/* line 640, ../../../app/assets/stylesheets/grid.scss */
+/* line 620, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box {
   background-color: #fff;
   margin-top: 36px;
@@ -1117,41 +1096,41 @@ a:hover {
   min-height: 376px;
   display: block;
 }
-/* line 646, ../../../app/assets/stylesheets/grid.scss */
+/* line 626, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .borders {
   border-style: solid;
   border-width: 1px;
   min-height: 376px;
   display: block;
 }
-/* line 653, ../../../app/assets/stylesheets/grid.scss */
+/* line 633, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .content .content-top {
   height: 280px;
 }
-/* line 655, ../../../app/assets/stylesheets/grid.scss */
+/* line 635, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .text-right {
   text-align: right;
 }
-/* line 658, ../../../app/assets/stylesheets/grid.scss */
+/* line 638, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 661, ../../../app/assets/stylesheets/grid.scss */
+/* line 641, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box a {
   color: #fff;
 }
-/* line 662, ../../../app/assets/stylesheets/grid.scss */
+/* line 642, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 664, ../../../app/assets/stylesheets/grid.scss */
+/* line 644, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .image-box {
   height: 376px;
 }
 
-/* line 669, ../../../app/assets/stylesheets/grid.scss */
+/* line 649, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box {
   background-color: #fff;
   margin-top: 36px;
@@ -1163,36 +1142,36 @@ a:hover {
   min-height: 376px;
   display: block;
 }
-/* line 675, ../../../app/assets/stylesheets/grid.scss */
+/* line 655, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .borders {
   border-style: solid;
   border-width: 1px;
   min-height: 376px;
   display: block;
 }
-/* line 682, ../../../app/assets/stylesheets/grid.scss */
+/* line 662, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .content .content-top {
   height: 280px;
 }
-/* line 684, ../../../app/assets/stylesheets/grid.scss */
+/* line 664, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .text-right {
   text-align: right;
 }
-/* line 687, ../../../app/assets/stylesheets/grid.scss */
+/* line 667, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 690, ../../../app/assets/stylesheets/grid.scss */
+/* line 670, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box a {
   color: #fff;
 }
-/* line 691, ../../../app/assets/stylesheets/grid.scss */
+/* line 671, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 693, ../../../app/assets/stylesheets/grid.scss */
+/* line 673, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .image-box {
   height: 376px;
 }
